--- a/agent_cfg.ini
+++ b/agent_cfg.ini
@@ -1,6 +1,8 @@
 [agent_manager]
-host = 127.0.0.1
+host = 10.21.137.180
 port = 8080
+root = agent_manager/AgentManagerCore
 
 [agent]
 id=TEST-Haikou-Wyyhzc
+load_file_path=/opt/hadoop/python/build/
